Upgrade versions of dependencies and plugins